Hall of Fame annotation and further clarifications.

--- a/03_knapsack_2D_deap.ipynb
+++ b/03_knapsack_2D_deap.ipynb
@@ -904,16 +904,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "burning-dimension",
+   "metadata": {},
+   "source": [
+    "## Knapsack Optimisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "informational-tourism",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-09T17:06:48.290663Z",
-     "start_time": "2021-05-09T17:06:35.898748Z"
-    },
-    "lines_to_next_cell": 0
-   },
+   "execution_count": null,
+   "id": "initial-switch",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def genetic_algorithm(verbose=False, hack=False):\n",
@@ -938,8 +940,23 @@
     "        eaMuPlusLambda(pop, toolbox, MU, LAMBDA, CXPB, MUTPB, NGEN, stats,\n",
     "                                  halloffame=hof, verbose=verbose)\n",
     "\n",
-    "        return pop, stats, hof, logbook\n",
-    "        \n",
+    "        return pop, stats, hof, logbook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "informational-tourism",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-09T17:06:48.290663Z",
+     "start_time": "2021-05-09T17:06:35.898748Z"
+    },
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "# running the genetic algorithm (might take a while, depending on NGEN)      \n",
     "\n",
     "pop, stats, hof, logbook = genetic_algorithm(hack=False)"
    ]
@@ -982,6 +999,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "played-demand",
+   "metadata": {},
+   "source": [
+    "The *Hall of Fame* (`hof`) is a `ParetoFront` object containing exactly that, the Pareto Front solutions of all the generations. \n",
+    "\n",
+    "Further below in the `eaMuPlusLambda_hack` function you can identify it being updated by  `halloffame.update(offspring)`. \n",
+    "\n",
+    "Let's examine the statistics of `hof`, where we expect the `avg` to be better than the final `pop`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "dying-celtic",
@@ -1014,7 +1043,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(\"statistics of the Hall of Fame (Pareto Front of all generations)\")\n",
     "stats.compile(hof)"
    ]
@@ -1066,7 +1094,7 @@
    "id": "processed-cartridge",
    "metadata": {},
    "source": [
-    "## Diversity\n",
+    "## Examining Diversity\n",
     "\n",
     "Some algorithms for meaningful insights of the population"
    ]
@@ -1351,7 +1379,7 @@
    "id": "metropolitan-duration",
    "metadata": {},
    "source": [
-    "## Visualising"
+    "## Visualising Final Population"
    ]
   },
   {
@@ -1632,6 +1660,8 @@
    },
    "outputs": [],
    "source": [
+    "# running the genetic algorithm (might take a while, depending on NGEN)\n",
+    "\n",
     "pop, stats, hof, logbook, all_generations = genetic_algorithm(hack=True)"
    ]
   },
@@ -1814,9 +1844,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "262.875px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
